--- a/src/frontend_celery/webapp/static/css/utils.css
+++ b/src/frontend_celery/webapp/static/css/utils.css
@@ -25,7 +25,9 @@
 .vssr {
     margin-right: 0.2em;
 }
-
+.nsr {
+    margin-right: 0;
+}
 
 .bsl {
     margin-left: 1em;
